// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Pagination center renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
    role="navigation"
  >
    <ul
      class="pagination justify-content-center"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Previous
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="/example.html"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="/example.html"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Next
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination end renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
    role="navigation"
  >
    <ul
      class="pagination justify-content-end"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Previous
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="/example.html"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="/example.html"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Next
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination lg renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
    role="navigation"
  >
    <ul
      class="pagination pagination-lg"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Previous
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="/example.html"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="/example.html"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Next
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Previous
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="/example.html"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="/example.html"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Next
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination sm renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
    role="navigation"
  >
    <ul
      class="pagination pagination-sm"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Previous
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="/example.html"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="/example.html"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          Next
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="/example.html"
        >
          <svg
            class="bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-double-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;
